--- a/animation_portfolio.html
+++ b/animation_portfolio.html
@@ -109,14 +109,18 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(247, 237, 237, 0.98);
+            background: rgba(247, 237, 237, 0.4);
+            backdrop-filter: blur(10px);
             z-index: 2000;
             align-items: center;
             justify-content: center;
+            opacity: 0;
+            transition: opacity 0.4s ease;
         }
 
         .modal.active {
             display: flex;
+            opacity: 1;
         }
 
         .modal-content {
@@ -124,6 +128,14 @@
             width: 90%;
             max-width: 1200px;
             aspect-ratio: 16/9;
+            transform: scale(0.7);
+            opacity: 0;
+            transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1), opacity 0.4s ease;
+        }
+
+        .modal.active .modal-content {
+            transform: scale(1);
+            opacity: 1;
         }
 
         .modal-close {
@@ -272,7 +284,7 @@
         <div class="projects-grid">
             <div class="project-card" onclick="openModal('modal1')">
                 <div class="project-video-container">
-                    <img src="https://i.vimeocdn.com/video/1131777323_640.jpg" alt="The Dream Machine" class="project-thumbnail">
+                    <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/THE%20DREAM%20MACHINE%20is%20going%20to%20premiere%20this%20march%20at%20@sxswI%20wrote%20the%20script%20to%20The%20Dream%20Machin.jpg?raw=true" alt="The Dream Machine" class="project-thumbnail">
                     <div class="project-overlay">
                         <h3 class="project-title-overlay">The Dream Machine</h3>
                     </div>
@@ -281,7 +293,7 @@
 
             <div class="project-card" onclick="openModal('modal2')">
                 <div class="project-video-container">
-                    <img src="https://i.vimeocdn.com/video/681522101_640.jpg" alt="Chelsea Jade | Good Taste" class="project-thumbnail">
+                    <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/taste_faces.gif?raw=true" alt="Chelsea Jade | Good Taste" class="project-thumbnail">
                     <div class="project-overlay">
                         <h3 class="project-title-overlay">Chelsea Jade | Good Taste</h3>
                     </div>
@@ -384,13 +396,21 @@
 
     <script>
         function openModal(modalId) {
-            document.getElementById(modalId).classList.add('active');
+            const modal = document.getElementById(modalId);
+            modal.style.display = 'flex';
+            // Trigger reflow to ensure animation plays
+            modal.offsetHeight;
+            modal.classList.add('active');
             document.body.style.overflow = 'hidden';
         }
 
         function closeModal(modalId) {
-            document.getElementById(modalId).classList.remove('active');
-            document.body.style.overflow = 'auto';
+            const modal = document.getElementById(modalId);
+            modal.classList.remove('active');
+            setTimeout(() => {
+                modal.style.display = 'none';
+                document.body.style.overflow = 'auto';
+            }, 400); // Match transition duration
         }
 
         // Close modal on Escape key
@@ -399,7 +419,10 @@
                 const activeModal = document.querySelector('.modal.active');
                 if (activeModal) {
                     activeModal.classList.remove('active');
-                    document.body.style.overflow = 'auto';
+                    setTimeout(() => {
+                        activeModal.style.display = 'none';
+                        document.body.style.overflow = 'auto';
+                    }, 400);
                 }
             }
         });
