--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(247, 237, 237, 0.4);
+            background: rgba(0, 0, 0, 0.85);
             backdrop-filter: blur(10px);
             z-index: 2000;
             align-items: center;
@@ -183,7 +183,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(209, 93, 93, 0.9);
+            background: rgba(209, 93, 93, 0.95);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -421,7 +421,7 @@
         <div class="modal-content" onclick="event.stopPropagation()">
             <button class="modal-close" onclick="closeModal('modal5')">&times;</button>
             <div class="modal-video-container">
-                <iframe src="https://player.vimeo.com/video/179993355?autoplay=1" 
+                <iframe src="https://player.vimeo.com/video/179993355" 
                         frameborder="0" 
                         allow="autoplay; fullscreen; picture-in-picture" 
                         allowfullscreen></iframe>
@@ -450,6 +450,14 @@
     <script>
         function openModal(modalId) {
             const modal = document.getElementById(modalId);
+            const iframe = modal.querySelector('iframe');
+            
+            // Add autoplay to iframe when opening
+            if (iframe && iframe.src.indexOf('autoplay') === -1) {
+                const separator = iframe.src.indexOf('?') > -1 ? '&' : '?';
+                iframe.src = iframe.src + separator + 'autoplay=1';
+            }
+            
             modal.style.display = 'flex';
             // Trigger reflow to ensure animation plays
             modal.offsetHeight;
