--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
             </div>
             <div class="modal-description">
                 A series of short animated films made for Season 4 of the FXX series 'CAKE'.<br>
-                <strong>WATCH ON HULU.</strong>
+                <a href="https://www.hulu.com/series/cake-73156265-7a27-4d87-aaa3-72c3018cbf5e" target="_blank">WATCH ON HULU.</a>
             </div>
         </div>
     </div>
