--- a/index.html
+++ b/index.html
@@ -336,6 +336,15 @@
                     </div>
                 </div>
             </div>
+
+            <div class="project-card" onclick="openModal('modal7')">
+                <div class="project-video-container">
+                    <div class="project-placeholder">👑</div>
+                    <div class="project-overlay">
+                        <h3 class="project-title-overlay">King Sweeties</h3>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -439,6 +448,21 @@
             <div class="modal-description" style="text-align: center;">
                 A series of short animated films made for Season 4 of the FXX series 'CAKE'.<br>
                 <a href="https://www.hulu.com/series/cake-73156265-7a27-4d87-aaa3-72c3018cbf5e" target="_blank">WATCH ON HULU.</a>
+            </div>
+        </div>
+    </div>
+
+    <div id="modal7" class="modal" onclick="closeModal('modal7')">
+        <div class="modal-content" onclick="event.stopPropagation()">
+            <button class="modal-close" onclick="closeModal('modal7')">&times;</button>
+            <div class="modal-video-container">
+                <iframe data-src="https://www.youtube.com/embed/75itBVphaH0?autoplay=1" 
+                        frameborder="0" 
+                        allow="autoplay; fullscreen; picture-in-picture" 
+                        allowfullscreen></iframe>
+            </div>
+            <div class="modal-description" style="text-align: center;">
+                King Sweeties
             </div>
         </div>
     </div>
