--- a/index.html
+++ b/index.html
@@ -294,27 +294,27 @@
 
             <div class="project-card" onclick="openModal('modal2')">
                 <div class="project-video-container">
-                    <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/taste_faces.gif?raw=true" alt="Chelsea Jade | Good Taste" class="project-thumbnail">
+                    <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/taste_faces.gif?raw=true" alt="Good Taste" class="project-thumbnail">
                     <div class="project-overlay">
-                        <h3 class="project-title-overlay">Chelsea Jade | Good Taste</h3>
+                        <h3 class="project-title-overlay">Good Taste</h3>
                     </div>
                 </div>
             </div>
 
             <div class="project-card" onclick="openModal('modal3')">
                 <div class="project-video-container">
-                    <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/Falling-Face-LOOP2.gif?raw=true" alt="Lawrence Arabia | One Unique Creature" class="project-thumbnail">
+                    <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/Falling-Face-LOOP2.gif?raw=true" alt="One Unique Creature" class="project-thumbnail">
                     <div class="project-overlay">
-                        <h3 class="project-title-overlay">Lawrence Arabia | One Unique Creature</h3>
+                        <h3 class="project-title-overlay">One Unique Creature</h3>
                     </div>
                 </div>
             </div>
 
             <div class="project-card" onclick="openModal('modal4')">
                 <div class="project-video-container">
-                    <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/GIF-run-guy.gif?raw=true" alt="Julien Dyne | Hours" class="project-thumbnail">
+                    <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/GIF-run-guy.gif?raw=true" alt="Hours" class="project-thumbnail">
                     <div class="project-overlay">
-                        <h3 class="project-title-overlay">Julien Dyne | Hours</h3>
+                        <h3 class="project-title-overlay">Hours</h3>
                     </div>
                 </div>
             </div>
@@ -339,9 +339,18 @@
 
             <div class="project-card" onclick="openModal('modal7')">
                 <div class="project-video-container">
-                    <div class="project-placeholder">👑</div>
+                    <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/kingsweeties.gif?raw=true" alt="King Sweeties" class="project-thumbnail">
                     <div class="project-overlay">
                         <h3 class="project-title-overlay">King Sweeties</h3>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card" onclick="openModal('modal8')">
+                <div class="project-video-container">
+                    <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/Room%20B+W.gif?raw=true" alt="Outer Monologue" class="project-thumbnail">
+                    <div class="project-overlay">
+                        <h3 class="project-title-overlay">Outer Monologue</h3>
                     </div>
                 </div>
             </div>
@@ -462,7 +471,21 @@
                         allowfullscreen></iframe>
             </div>
             <div class="modal-description" style="text-align: center;">
-                King Sweeties
+                Videos for 'Lydia' and 'Let's Just Stay In Bed' by <a href="https://www.facebook.com/kingsweeties/" target="_blank">KING SWEETIES</a>.<br>
+                2020
+            </div>
+        </div>
+    </div>
+
+    <div id="modal8" class="modal" onclick="closeModal('modal8')">
+        <div class="modal-content" onclick="event.stopPropagation()">
+            <button class="modal-close" onclick="closeModal('modal8')">&times;</button>
+            <div class="modal-video-container">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/Room%20B+W.gif?raw=true" alt="Outer Monologue">
+            </div>
+            <div class="modal-description" style="text-align: center;">
+                A short film created for Mailchimp.<br>
+                <a href="https://mailchimp.com/presents/series/outer-monologue/molly-bingham/" target="_blank">YOU CAN WATCH IT HERE.</a>
             </div>
         </div>
     </div>
