--- a/index.html
+++ b/index.html
@@ -251,6 +251,15 @@
             .nav-links {
                 gap: 1rem;
             }
+
+            .modal-content {
+                width: 95vw;
+                max-height: 80vh;
+            }
+
+            .project-title-overlay {
+                font-size: 1.5rem;
+            }
         }
     </style>
 </head>
@@ -372,10 +381,10 @@
                         allowfullscreen></iframe>
             </div>
             <div class="modal-description" style="text-align: center;">
-                Written and directed by Jimmy Marble.<br>
+                Written and directed by <a href="https://www.jimmymarble.com/" target="_blank">Jimmy Marble</a>.<br>
                 Animated by Frances Haszard and Louis Olsen<br>
-                Produced by Thomas Grabinski, Jett Steiger, and Lana Kimby<br>
-                Ways & Means and Oh Baby, Inc
+                Produced by Thomas Grabinski, Jett Steiger, and Lana Kim<br>
+                By <a href="https://ways-means.co/" target="_blank">Ways & Means</a> and Oh Baby, Inc
             </div>
         </div>
     </div>
@@ -390,7 +399,7 @@
                         allowfullscreen></iframe>
             </div>
             <div class="modal-description" style="text-align: center;">
-                Music video for 'Good Taste' by <strong>CHELSEA JADE.</strong><br>
+                Music video for 'Good Taste' by <a href="https://www.chelseajade.co/" target="_blank"><strong>CHELSEA JADE.</strong></a><br>
                 Funded by NZ on Air.<br>
                 2022
             </div>
@@ -407,7 +416,7 @@
                         allowfullscreen></iframe>
             </div>
             <div class="modal-description" style="text-align: center;">
-                Music video for 'One Unique Creature' by <strong>LAWRENCE ARABIA.</strong><br>
+                Music video for 'One Unique Creature' by <a href="https://www.lawrencearabia.com/" target="_blank"><strong>LAWRENCE ARABIA.</strong></a><br>
                 Funded by NZ on Air.<br>
                 2019
             </div>
