--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@
             justify-content: center;
             opacity: 0;
             transition: opacity 0.4s ease;
-            padding: 2rem;
+            padding: 4rem 2rem 2rem;
+            overflow-y: auto;
         }
 
         .modal.active {
@@ -185,11 +186,12 @@
 
         .modal-content {
             position: relative;
-            width: 100%;
-            max-width: 1600px;
+            width: 90%;
+            max-width: 1200px;
             transform: scale(0.7);
             opacity: 0;
             transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1), opacity 0.4s ease;
+            margin: auto;
         }
 
         .modal.active .modal-content {
@@ -229,12 +231,12 @@
 
         .modal-close {
             position: absolute;
-            top: -40px;
+            top: -50px;
             right: 0;
             background: none;
             border: none;
-            color: #D15D5D;
-            font-size: 2rem;
+            color: #fff;
+            font-size: 2.5rem;
             cursor: pointer;
             padding: 0.5rem;
             transition: opacity 0.3s;
@@ -501,8 +503,8 @@
                         allowfullscreen></iframe>
             </div>
             <div class="modal-description">
-                Animation of the poem 'Children Are The Orgasm Of The World' by <strong>HERA LINDSAY BIRD</strong><br>
-                for <strong>THE PANTOGRAPH PUNCH.</strong><br>
+                Animation of the poem 'Children Are The Orgasm Of The World' by <a href="https://www.heralindsaybird.com/" target="_blank"><strong>HERA LINDSAY BIRD</strong></a><br>
+                for <a href="https://www.pantograph-punch.com/" target="_blank"><strong>THE PANTOGRAPH PUNCH.</strong></a><br>
                 2016
             </div>
         </div>
