--- a/index.html
+++ b/index.html
@@ -536,6 +536,12 @@
                 Videos for 'Lydia' and 'Let's Just Stay In Bed' by <a href="https://www.facebook.com/kingsweeties/" target="_blank">KING SWEETIES</a>.<br>
                 2020
             </div>
+            <div class="modal-video-wrapper" style="margin-top: 2rem;">
+                <iframe data-src="https://www.youtube.com/embed/BEThpBS-fGQ" 
+                        frameborder="0" 
+                        allow="fullscreen; picture-in-picture" 
+                        allowfullscreen></iframe>
+            </div>
         </div>
     </div>
 
