--- a/index.html
+++ b/index.html
@@ -229,6 +229,19 @@
             object-fit: contain;
         }
 
+        .modal-extra-media {
+            width: 100%;
+            margin-top: 2rem;
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        .modal-extra-media img {
+            width: 100%;
+            height: auto;
+            display: block;
+        }
+
         .modal-close {
             position: absolute;
             top: -50px;
@@ -489,6 +502,21 @@
                 Music video for 'Hours' by <a href="https://www.banishedmusic.com/artist-page/julien-dyne" target="_blank"><strong>JULIEN DYNE.</strong></a><br>
                 Funded by NZ on Air.<br>
                 2017
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/GIF-shower.gif?raw=true" alt="Hours">
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/GIF-spinny-guy.gif?raw=true" alt="Hours">
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/Hours+STILL+1_700px.jpg?raw=true" alt="Hours Still 1">
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/Hours+STILL+2_700px.jpg?raw=true" alt="Hours Still 2">
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/Hours+STILL+3_700px.jpg?raw=true" alt="Hours Still 3">
             </div>
         </div>
     </div>
