--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         <div class="projects-grid">
             <div class="project-card" onclick="openModal('modal1')">
                 <div class="project-video-container">
-                    <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/THE%20DREAM%20MACHINE%20is%20going%20to%20premiere%20this%20march%20at%20@sxswI%20wrote%20the%20script%20to%20The%20Dream%20Machin.jpg?raw=true" alt="The Dream Machine" class="project-thumbnail">
+                    <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/DreamMachine_GIF-1-smol.gif?raw=true" alt="The Dream Machine" class="project-thumbnail">
                     <div class="project-overlay">
                         <h3 class="project-title-overlay">The Dream Machine</h3>
                     </div>
@@ -452,6 +452,9 @@
                 Produced by Thomas Grabinski, Jett Steiger, and Lana Kim<br>
                 By <a href="https://ways-means.co/" target="_blank">Ways & Means</a> and Oh Baby, Inc
             </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/THE%20DREAM%20MACHINE%20is%20going%20to%20premiere%20this%20march%20at%20@sxswI%20wrote%20the%20script%20to%20The%20Dream%20Machin.jpg?raw=true" alt="The Dream Machine">
+            </div>
         </div>
     </div>
 
@@ -485,6 +488,21 @@
                 Music video for 'One Unique Creature' by <a href="https://www.lawrencearabia.com/" target="_blank"><strong>LAWRENCE ARABIA.</strong></a><br>
                 Funded by NZ on Air.<br>
                 2019
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/Stretchy-Table-LOOP.gif?raw=true" alt="One Unique Creature">
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/Spaghetti-LOOP.gif?raw=true" alt="One Unique Creature">
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/One%2BUnique%2BCreature_STILL03_700px.jpg?raw=true" alt="One Unique Creature Still 3">
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/One%2BUnique%2BCreature_STILL04_700px.jpg?raw=true" alt="One Unique Creature Still 4">
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/One%2BUnique%2BCreature_STILL05_700px.jpg?raw=true" alt="One Unique Creature Still 5">
             </div>
         </div>
     </div>
@@ -582,6 +600,15 @@
             <div class="modal-description">
                 A short film created for Mailchimp.<br>
                 <a href="https://mailchimp.com/presents/series/outer-monologue/molly-bingham/" target="_blank">YOU CAN WATCH IT HERE.</a>
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/CrowdHand.gif?raw=true" alt="Outer Monologue">
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/Face%20shuffle.gif?raw=true" alt="Outer Monologue">
+            </div>
+            <div class="modal-extra-media">
+                <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/Snake.gif?raw=true" alt="Outer Monologue">
             </div>
         </div>
     </div>
