--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
     <div id="modal6" class="modal" onclick="closeModal('modal6')">
         <div class="modal-content" onclick="event.stopPropagation()">
             <button class="modal-close" onclick="closeModal('modal6')">&times;</button>
-            <div class="modal-video-wrapper">
+            <div class="modal-extra-media">
                 <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/diggidyDog.gif?raw=true" alt="Nerve Endings">
             </div>
             <div class="modal-description">
@@ -594,7 +594,7 @@
     <div id="modal8" class="modal" onclick="closeModal('modal8')">
         <div class="modal-content" onclick="event.stopPropagation()">
             <button class="modal-close" onclick="closeModal('modal8')">&times;</button>
-            <div class="modal-video-wrapper">
+            <div class="modal-extra-media">
                 <img src="https://github.com/louisolsen-dotcom/FrancesHaszard/blob/main/Room%20B+W.gif?raw=true" alt="Outer Monologue">
             </div>
             <div class="modal-description">
